# embedded-lvgl-ui-example

./: README.md  README_TR.md
docs/: architecture.md  todo.md  usage.md
docs/TR/: architecture_TR.md  todo_TR.md
src/EN/: average_data.cpp  header.cpp  live_data.cpp  main.cpp  maingui.cpp  maingui.h  screen_manager.cpp  screen_manager.h  sensor_recorder.cpp  sensor_settings.cpp  sensor_settings.h  serial_sensor.cpp  settings_screen.cpp  style.cpp  style.h  systemfunctions.cpp  systemfunctions.h  systeminfo.cpp  systeminfo.h  wifi_settings.cpp  wifi_settings.h
src/TR/: CMakeLists.txt  average_data.cpp  average_data.h  header.h  live_data.cpp  live_data.h  main.cpp  maingui.cpp  screen_manager.cpp  sensor_recorder.cpp  sensor_recorder.h  sensor_settings.cpp  serial_sensor.cpp  serial_sensor.h  settings_screen.cpp  settings_screen.h  style.cpp  systemfunctions.cpp  systeminfo.cpp  wifi_settings.cpp
